--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,8 +16,8 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen 8080;
-        server_name localhost;
+        listen 80;
+        server_name horariospagantes.vip;
         root /var/www/html/public;
 
         location / {
