--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       - ./volumes/horarios-pagantes:/var/www/html
     container_name: meu_app
     environment:
-      - VIRTUAL_HOST=horariospagantes.vip
-      - LETSENCRYPT_HOST=horariospagantes.vip
+      - VIRTUAL_HOST=multiplicadormilionario.com
+      - LETSENCRYPT_HOST=multiplicadormilionario.com
       - LETSENCRYPT_EMAIL=nicollasacruz@gmail.com
       - VIRTUAL_PORT=8080
     depends_on:
